# favour

./: .gitignore  CMakeLists.txt  Readme.md  configuration
curl/: local-kibana.conf  local-kibana.json  query.json
curl/boss-direct-employment/: base.conf  getGeekFriendList.conf  historyMsg.conf
lib/nlohmann/: json.hpp
sources/: config.json
src/: main.cpp
src/config/: config.cpp  config.h  hook.cpp  hook.h
src/exception/: CurlException.hpp  FavourException.h
src/gui/: PollingTrayIcon.cpp  PollingTrayIcon.h
src/kibana/: kibana.cpp  kibana.h
src/utils/: utils.cpp  utils.h
unit/: main.cpp
unit/kibana/: KibanaManagerTest.cpp  KibanaManagerTest.h
unit/utils/: UtilsTest.cpp  UtilsTest.h
